Fix spacing below mixcloud images

--- a/app/styles/components/s-mixcloud.scss
+++ b/app/styles/components/s-mixcloud.scss
@@ -7,6 +7,9 @@ s-mixcloud {
     justify-content: flex-start;
   }
 
+  img {
+    display: block;
+  }
   > .info {
     display: flex;
     flex-direction: column;
